# fastapi-deep-dive

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 22779271492c_initial_migration.py  2a47fb8adf3c_initial_migration.py  32378b6bf5b6_initial_migration.py  32eca3595355_initial_migration.py  36dd53a188d6_initial_migration.py  37a3d8435827_initial_migration.py  57a7afac0631_initial_migration.py  5bb802d9c640_initial_migration.py  6504bb260bb0_initial_migration.py  820bd9156fd3_initial_migration.py  903b82bb826c_initial_migration.py  96d3d2a6ee0d_initial_migration.py  a286a84da573_initial_migration.py  c2d5bcea6888_initial_migration.py  ccac3079f51a_initial_migration.py  e7a76f33d447_initial_migration.py  eb8cede36307_initial_migration.py
src/: const.py  main.py  tasks.py
src/backend/: config.py  security.py  session.py
src/db/: database.py  models.py
src/routers/: auth_router.py  resource_router.py  skill_router.py  user_router.py
src/schemas/: learning_resource_schema.py  skills_schema.py  token_schema.py  user_schema.py
src/services/: base.py  base_service.py  resource_service.py  skill_service.py  token_service.py  user_service.py
src/utils/: auth_utils.py
tests/: conftest.py  test_resource_router.py
